--- a/LLA.GUI/Dialogs/Knowledge testing/KnowledgeTestDialog.xaml
+++ b/LLA.GUI/Dialogs/Knowledge testing/KnowledgeTestDialog.xaml
@@ -7,8 +7,8 @@
         xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
         mc:Ignorable="d" 
       Title="Тест знаний" SizeToContent="WidthAndHeight" MinWidth="600" ResizeMode="NoResize" WindowStartupLocation="CenterOwner" ShowInTaskbar="True">
-    
-    <StackPanel Grid.IsSharedSizeScope="True" FocusManager.FocusedElement="{Binding ElementName=Ctrl_EngWriting}" >
+
+    <StackPanel Grid.IsSharedSizeScope="True" FocusManager.FocusedElement="{Binding ElementName=Ctrl_UserAnswerTBox}" >
         <Label Name="Ctrl_DialogHeader"/>
         <GroupBox Name="Ctrl_UkrGroup" Margin="3">
             <GroupBox.Header>
@@ -114,19 +114,19 @@
         
         <StackPanel Grid.Column="0" Grid.Row="7" Grid.ColumnSpan="2" Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,10"
                     SnapsToDevicePixels="True">
-            <Button Name="Ctrl_Defer" Content="Отложить" MinWidth="100" Margin="10" IsCancel="True" BorderThickness="1"/>
+            <Button Name="Ctrl_Defer" Content="Проверить" MinWidth="100" Margin="10" IsCancel="True" BorderThickness="1" Command="local:QuizDialog_Commands.Quiz_CheckAnswer"/>
             <Border BorderBrush="#FF707070" BorderThickness="1" Margin="10">
                 <StackPanel Orientation="Horizontal"  VerticalAlignment="Center">
-                    <Button Name="Ctrl_Check" Content="Отложить" MinWidth="100" VerticalAlignment="Stretch" IsCancel="True" Background="LightGray"
+                    <Button Name="Ctrl_Check" Content="Следующий" MinWidth="100" VerticalAlignment="Stretch" IsCancel="True" Background="LightGray"
                         BorderThickness="0"/>
                     <Menu VerticalAlignment="Stretch">
                         <MenuItem Background="LightGray" BorderThickness="0">
                             <MenuItem.Header>
                                 <Label Content="▼" VerticalAlignment="Stretch"></Label>
                             </MenuItem.Header>
-                            <MenuItem Header="Проверить"/>
-                            <MenuItem Header="Проверить и далее"/>
-                            <MenuItem Header="Проверить и завершить"/>
+                            <MenuItem Header="Следующий" Command="local:QuizDialog_Commands.Quiz_CheckAnswerAndGoToNextText"/>
+                            <MenuItem Header="Отложить" Command="local:QuizDialog_Commands.Quiz_DeferTest"/>
+                            <MenuItem Header="Завершить" Command="local:QuizDialog_Commands.Quiz_FinishTesting"/>
                         </MenuItem>
                     </Menu>
                     
